fix nav items alignment

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -320,6 +320,7 @@ nav ol {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   list-style-type: none;
   margin: 0;
   padding-inline-start: 0;
